# drink_solver

./: .gitignore  Cargo.toml  icon.aseprite
src/: builder.rs  component_builder.rs  ingredient.rs  ingredient_builder.rs  ingredient_selector_builder.rs  ingredient_store.rs  ingredients.rs  main.rs  measure.rs  recipie.rs  recipie_builder.rs  recipie_store.rs  store.rs
src/widgets/: create_component.rs  create_ingredient.rs  create_recipie.rs  create_vec.rs  create_vec_kernels.rs  ingredient.rs  main_widget.rs  mod.rs  recipie.rs  styling.rs
