[package]
name = "drink_solver"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
eframe = "0.32.3"
egui = "0.32.3"
image = "0.25.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
strum = { version = "0.27.2", features = ["derive"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }

[profile.release]
codegen-units = 1
lto = "fat"